<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/choosePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="95dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338">

        <RadioButton
            android:id="@+id/Player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkRadioButton"
            android:text="@string/Player1"
            app:layout_constraintBottom_toTopOf="@+id/Player2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosePlayer"
            app:layout_constraintVertical_bias="0.418"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/Player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkRadioButton"
            android:text="@string/Player2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosePlayer"
            app:layout_constraintVertical_bias="0.228" />

        <RadioButton
            android:id="@+id/Player3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkRadioButton"
            android:text="@string/Player3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Player2"
            app:layout_constraintVertical_bias="0.181" />
    </RadioGroup>

    <Button
        android:id="@+id/playerSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerSelected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>